<resources>
    <string name="app_name">StudentSystem</string>
    <string name="account_text_view">账号</string>
    <string name="account_edit_text_hint">邮箱</string>
    <string name="password_text_view">密码</string>
    <string name="remeber_password_text_view">记住密码</string>
    <string name="sign_up_button">注册</string>
    <string name="login_button">登录</string>
    <string name="new_item">新建</string>
    <string name="complete_button_text">确定</string>
    <string name="search_hint">输入关键字查询</string>
    <string name="search_back">返回</string>
    <string name="feedback_button_text">提交</string>
</resources>
